--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.13.0" }
+once_cell = "1.19.0"
+rand = "0.8.5"
 regex = "1.5.4"
 uuid = "1.8.0"
